--- a/infograph/index.htm
+++ b/infograph/index.htm
@@ -28,9 +28,9 @@
 
 				<aside class="circle stage-1">
 
-					<div class="point">
+					<div class="point inactive">
 
-						<a target="_blank" href="#">
+						<a class="inactive" target="_blank" href="#">
 
 							<div></div>
 
@@ -172,7 +172,7 @@
 
 					<div class="point">
 
-						<a target="_blank" href="#">
+						<a target="_blank" href="http://cfe.umich.edu/pathways-to-impact/">
 
 							<div></div>
 
