--- a/infograph/index.htm
+++ b/infograph/index.htm
@@ -138,7 +138,7 @@
 							<div></div>
 
 							<span>
-								<div class="label 1x">Regional I-Corp</div>
+								<div class="label 1x">Industry I-Corps</div>
 								<div class="icons">
 									<img src="images/cfe.png" />
 									<img src="images/mentorship.png" />
