--- a/infograph/index.htm
+++ b/infograph/index.htm
@@ -278,7 +278,7 @@
 
 					<div class="point">
 
-						<a target="_blank" href="http://www.bme.umich.edu/research/coulter.php">
+						<a target="_blank" href="http://bme.umich.edu/research/coulter/">
 
 							<div></div>
 
