Techlab contact info

--- a/techlab/index.htm
+++ b/techlab/index.htm
@@ -497,6 +497,7 @@
 
 			<strong>Interested?</strong>
 			<p>Contact: Jay Ellis, <a href="mailto:jwellis@umich.edu">jwellis@umich.edu</a></p>
+			<p>Carrie Morton, <a href="mailto:jwellis@umich.edu">cemorton@umich.edu</a></p>
 
 		</div>
 
