--- a/techlab/index.htm
+++ b/techlab/index.htm
@@ -477,7 +477,7 @@
 				<span>
 					Currently accepting applications from engineering
 					students. Get credit for working with the technology
-					that will transform the transportation industry.
+					that will transform the transportation industry. <a target="_blank" href="http://goo.gl/forms/Q4DO8W7zWVoRef103">Apply here</a> &amp; email your resume to <a href="mailto:techlab-mcity@umich.edu">techlab-mcity@umich.edu</a>. 
 				</span>
 			</p>
 
